# Don't want AUTHORS, ChangeLog, NEWS, README.
AUTOMAKE_OPTIONS = foreign

SUBDIRS = src man test

EXTRA_DIST  = NOTICE
EXTRA_DIST += LICENSE
EXTRA_DIST += src/asn1/asn1c/LICENSE
EXTRA_DIST += examples/tal/afrinic.tal
EXTRA_DIST += examples/tal/apnic.tal
EXTRA_DIST += examples/tal/arin.tal
EXTRA_DIST += examples/tal/lacnic.tal
EXTRA_DIST += examples/tal/ripe-ncc.tal
EXTRA_DIST += examples/config.json
EXTRA_DIST += examples/demo.slurm
